# ROS2_AUTODOCKING_ROBOT

./: README.md
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: display.rviz  docks.yaml  navigation_params.yaml  ros_gz_bridge_gazebo.yaml
src/robot_description/launch/: gazebo_slam.launch.py  navigation.launch.py
src/robot_description/meshes/: base_link.stl  caster_1.stl  left_wheel_1.stl  lidar_1.stl  right_wheel_1.stl
src/robot_description/models/home_dock/: model.config  model.sdf
src/robot_description/models/work_dock/: model.config  model.sdf
src/robot_description/urdf/: materials.xacro  robot_description.gazebo  robot_description.xacro
src/robot_description/worlds/: world.sdf
